--- a/src/components/header/homeHeader.css
+++ b/src/components/header/homeHeader.css
@@ -59,6 +59,9 @@
   width: 20px;
 }
 
+.search-container {
+  width: 40%;
+}
 .search-input__form-wrapper {
   padding: 0;
   flex-grow: 1;
@@ -68,7 +71,6 @@
   padding: 0 5px 0 12px;
   border-radius: 8px;
   margin-right: 0;
-  width: 100%;
   position: relative;
 }
 
@@ -83,7 +85,7 @@
 
 .search-input-field {
   background-color: #f7f7f7;
-  min-width: 469px;
+  width: 100%;
   display: flex;
   height: 48px;
   padding-left: 50px;
